--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   crypto: ^3.0.3            # 用于LiblibAI的HMAC-SHA1签名
   cupertino_icons: ^1.0.8 # iOS风格的图标
   url_launcher: ^6.1.14 # 用于打开外部链接
-
+  video_player: ^2.8.6  # 用于视频播放
+  video_player_win: ^3.2.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -44,7 +46,7 @@ dev_dependencies:
   
   # 开发依赖
   build_runner: any # 配合 json_serializable 使用
-
+  json_serializable: ^6.7.1 # 用于生成 JSON 序列化代码
 
 flutter:
   uses-material-design: true
