--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
   push:
     # 只有当推送到 main 分支时才触发
     branches:
-      - main # 如果你的主分支是 master，请修改为 master
+      - main
 
 # 定义工作流中的任务
 jobs:
@@ -15,6 +15,10 @@ jobs:
     name: Build and Release Pre-release
     # 指定运行此任务的虚拟机环境
     runs-on: windows-latest
+
+    # 为整个 job 设置环境变量，简化后续步骤
+    env:
+      PROJECT_NAME: AiMoee # <--- 简化点：直接在此处定义你的项目名
 
     # 任务的执行步骤
     steps:
@@ -36,15 +40,11 @@ jobs:
       - name: Build Windows executable
         run: flutter build windows --release
 
-      # 步骤5：准备发布所需的信息
-      - name: Prepare release info
-        id: prepare_info
-        shell: pwsh # 明确使用 PowerShell Core
+      # 步骤5：生成唯一的发布标签
+      - name: Generate release tag
+        id: generate_tag # id 依然有用，虽然我们主要用 GITHUB_ENV
+        shell: pwsh
         run: |
-          # 直接从 pubspec.yaml 中读取 'name:' 所在的行并提取其值
-          $projectName = (Get-Content pubspec.yaml | Select-String -Pattern "^\s*name:\s*(.*)\s*$" | ForEach-Object { $_.Matches[0].Groups[1].Value }).Trim()
-          echo "PROJECT_NAME=$projectName" >> $env:GITHUB_ENV
-
           # 生成一个基于 日期-时间-SHA 的唯一标签名
           $date = Get-Date -Format "yyyyMMdd-HHmmss"
           $shortSha = "${{ github.sha }}".Substring(0, 7)
@@ -52,15 +52,22 @@ jobs:
           echo "TAG_NAME=$tagName" >> $env:GITHUB_ENV
           
           echo "Generated tag name: $tagName"
-          echo "Project name: $projectName"
+          echo "Project name: ${{ env.PROJECT_NAME }}"
 
-      # 步骤6：将构建产物打包成 ZIP
+      # 步骤6：将构建产物打包成 ZIP (已修复)
       - name: Package release assets
+        shell: pwsh # 明确指定 shell
         run: |
-          Compress-Archive -Path build\windows\runner\Release\* -DestinationPath ${{ env.PROJECT_NAME }}-${{ env.TAG_NAME }}-windows.zip
+          # 构造最终的 ZIP 文件名
+          $zipFileName = "${{ env.PROJECT_NAME }}-${{ env.TAG_NAME }}-windows.zip"
+          echo "ZIP_FILE_NAME=$zipFileName" >> $env:GITHUB_ENV # 将文件名存入环境变量，方便下一步引用
+          
+          # 使用更稳健的方式进行压缩
+          Get-ChildItem -Path build\windows\runner\Release | Compress-Archive -DestinationPath $zipFileName
+          
+          echo "Successfully created $zipFileName"
 
       # 步骤7：创建 GitHub Pre-release 并上传 ZIP 包
-      # 注意：这个 Action 会自动为我们创建 Git 标签
       - name: Create GitHub Pre-release
         uses: softprops/action-gh-release@v2
         with:
@@ -72,7 +79,7 @@ jobs:
           name: Pre-release ${{ env.TAG_NAME }}
           # 自动生成此版本与上一个版本之间的变更日志
           generate_release_notes: true
-          # 指向我们要上传的文件路径
-          files: ${{ env.PROJECT_NAME }}-${{ env.TAG_NAME }}-windows.zip
+          # 指向我们要上传的文件路径 (引用上一步生成的文件名)
+          files: ${{ env.ZIP_FILE_NAME }}
           # GitHub Actions 自动提供的 token
           token: ${{ secrets.GITHUB_TOKEN }}
