--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,13 +50,30 @@ jobs:
           echo "Generated tag name: $tagName"
           echo "Project name: AiMoee"
 
-      # 步骤6：将构建产物打包成 ZIP（修复路径问题：添加引号以正确处理通配符）
+      # 步骤6：调试构建目录（新增：验证 Release 目录是否存在及其内容）
+      - name: Debug build directory
+        shell: pwsh
+        run: |
+          Write-Output "Current directory: $(Get-Location)"
+          Write-Output "Build directory exists: $(Test-Path 'build')"
+          Write-Output "Windows runner directory exists: $(Test-Path 'build\windows\runner')"
+          Write-Output "Release directory exists: $(Test-Path 'build\windows\runner\Release')"
+          if (Test-Path 'build\windows\runner\Release') {
+            Write-Output "Contents of Release directory:"
+            Get-ChildItem 'build\windows\runner\Release' | ForEach-Object { Write-Output "  - $($_.Name)" }
+          } else {
+            Write-Output "Release directory not found. Full build structure:"
+            Get-ChildItem 'build' -Recurse | ForEach-Object { Write-Output "  - $($_.FullName)" }
+          }
+
+      # 步骤7：将构建产物打包成 ZIP（修复路径：移除引号以允许通配符展开，并确保路径正确）
       - name: Package release assets
         shell: pwsh
         run: |
-          Compress-Archive -Path "build\windows\runner\Release\*" -DestinationPath "${{ env.PROJECT_NAME }}-${{ env.TAG_NAME }}-windows.zip"
+          # 使用不带引号的路径以展开 * 通配符
+          Compress-Archive -Path build\windows\runner\Release\* -DestinationPath "${{ env.PROJECT_NAME }}-${{ env.TAG_NAME }}-windows.zip" -Force
 
-      # 步骤7：创建 GitHub Pre-release 并上传 ZIP 包
+      # 步骤8：创建 GitHub Pre-release 并上传 ZIP 包
       # 注意：这个 Action 会自动为我们创建 Git 标签
       - name: Create GitHub Pre-release
         uses: softprops/action-gh-release@v2
