--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "AiReaa",
-    "short_name": "AiReaa",
+    "name": "ReaDreamAI",
+    "short_name": "ReaDreamAI",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
